--- a/views/layout.html
+++ b/views/layout.html
@@ -6,7 +6,8 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/jquery.datagrid/jquery.datagrid.js"></script>
     <script src="/bower_components/jquery.datagrid/plugins/jquery.datagrid.bootstrap3.js"></script>
-
+    <script src="/bower_components/bootstrap.css/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
     {% block head %}{% endblock %}
 </head>
