Schema in progress

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,6 +28,8 @@ div.top-menu ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    float: left;
+    margin-right: 5px;
 }
 
 div.top-menu li {
