--- a/views/frontend/index.html
+++ b/views/frontend/index.html
@@ -10,5 +10,8 @@
 {% endblock %}
 
 {% block content %}
+    <script>
+        var genreId = {{ genreId }};
+    </script>
     <div id="datagrid"></div>
 {% endblock %}
