--- a/views/partials/public_menu.html
+++ b/views/partials/public_menu.html
@@ -3,6 +3,9 @@
         <ul>
             <li><a href="/">Movie</a></li>
         </ul>
+        <ul>
+            <li><a href="/genres">Genre</a></li>
+        </ul>
     </div>
     <div class="floatright">
         <ul>
