--- a/views/frontend/genre_list.html
+++ b/views/frontend/genre_list.html
@@ -5,9 +5,11 @@
 {% endblock %}
 
 {% block content %}
-    {{ movie.title }}
-    {{ movie.imdbId }}
-    {% for genre in movie.getGenres() %}
-        {{ genre.genre}}
+    <ul>
+    {% for genre in genres %}
+        <li>
+            <a href="/genre/{{ genre.id}}">{{ genre.genre }}</a>
+        </li>
     {% endfor %}
+        </ul>
 {% endblock %}
