Battle with sequelizer

--- a/views/partials/public_menu.html
+++ b/views/partials/public_menu.html
@@ -6,6 +6,12 @@
         <ul>
             <li><a href="/genres">Genre</a></li>
         </ul>
+        <ul>
+            <li><a href="/persons">Persons</a></li>
+        </ul>
+        <ul>
+            <li><a href="/jobs">Job</a></li>
+        </ul>
     </div>
     <div class="floatright">
         <ul>
