--- a/views/frontend/person_view.html
+++ b/views/frontend/person_view.html
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block content %}
-    {{ movie.title }}
-    {{ movie.imdbId }}
+    {{ person.name }}
+    {{ person.imdbId }}
 {% endblock %}
