Battle with sequelizer I'a winner!

--- a/views/frontend/person_view.html
+++ b/views/frontend/person_view.html
@@ -6,5 +6,7 @@
 
 {% block content %}
     {{ person.name }}
-    {{ person.imdbId }}
+    {% for job in person.getJobs() %}
+    {{ job.job }}
+{% endfor %}
 {% endblock %}
